[tool.poetry]
name = "pypkgs_khanhvu"
version = "0.1.0"
description = "Individual Assignment 1 for 524"
authors = ["Tran Doan Khanh Vu <tdkhanhvu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
